--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@devvit/public-api": "0.11.3"
   },
   "devDependencies": {
-    "typescript": "5.3.2"
+    "typescript": "5.3.2",
+    "vitest": "^2.1.6"
   }
 }
